<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="main_acctivity_button"
        android:text="@string/main_acctivity_button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="@+id/button1"
        android:onClick="main_acctivity_button"
        android:text="@string/main_acctivity_button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:onClick="main_acctivity_button"
        android:text="@string/main_acctivity_button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:onClick="main_acctivity_button"
        android:text="@string/main_acctivity_button4" />
    
    <!--ListView -->
    <LinearLayout
        android:id="@+id/drawing_planes"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@+id/button3"
        android:orientation="vertical">
        </LinearLayout>
	<!--/ListView -->

</RelativeLayout>
